--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -1,137 +1,107 @@
 <%- include("../partials/header.ejs"); %>
-
 <%- include("../partials/nav.ejs"); %>
 
-<div class="container-fluid">
-    <div class="chat-co row justify-content-center active p-5 my-4 bg-light rounded-3">
-        <!-- <h4>Icon Usercrios</h4>
-     
-    
-    <nav class="head nav nav-piles container-fluid bg-white">
-              <div type="button" href="#" class=" nav-item nav-link"> Posts: #</div> 
-              <div href="#" type="button" class="nav-item nav-link">Followers: #</div>
-              <div href="#" type="button" class="nav-item nav-link">Following: #</div>
-</nav>-->
-        <div class="border col-5 active_users">
-          <h4 class="pt-3 pb-4">Active users <hr></h4>
-        </div>
-        
-      <!-- $$$$$$$$$$ -->
-  <div class="col-7" id="chat-section">
-    <div class="row d-flex justify-content-center check2">
+<div class="container">
+<div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 border" style="position: absolute; bottom:0; right: 0;">
 
-      <div class="col-md-10 col-lg-8 col-xl-12 check">
+    <div class="card overflow-auto">
 
-        <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center p-3" style="background-color: #f5f6f7; border-top: 4px solid #008080; position:sticky; top:0; z-index: 2;">
 
-          <div class="card-header d-flex justify-content-between align-items-center p-3"
-
-            style="border-top: 4px solid #008080">
-
-            <h5 class="mb-0">
-
-              <i class="fas fa-comments me-3 text-muted fa-xs"></i>Chat messages </h5>
+            <h5 class="mb-0">Chat messages</h5>
 
             <div class="d-flex flex-row align-items-center">
 
-              <span class="badge me-3" style="background-color: #008080;">%#</span>
+                <span class="badge me-3" style="background-color: #008080;">#</span>
 
+                <i class="fas fa-minus me-3 text-muted fa-xs"></i>
 
-              <i class="fas fa-times text-muted fa-xs" id="close-section"></i>
+                <i class="fas fa-comments me-3 text-muted fa-xs"></i>
 
-            </div>
-
-          </div>
-
-          <div class="card-body" id="chat_messages" data-mdb-perfect-scrollbar="true" style="position: relative; height: 400px">
-            <div id="incoming_msgs">
-
-            <div class="d-flex justify-content-between">
-
-              <p id="username" class="small mb-1">Timona Siera</p>
-
-              <p id="rec-time" class="small mb-1 text-muted">23 Jan 2:00 pm</p>
+                <i class="fas fa-times text-muted fa-xs"></i>
 
             </div>
-
-            <div class="d-flex flex-row justify-content-start">
-
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp"
-
-                alt="avatar 1" style="width: 45px; height: 100%;">
-
-              <div>
-
-                <p id="message" class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">For what reason
-
-                  would it
-
-                  be advisable for me to think about business content?</p>
-
-              </div>
-              </div>
-
-            </div>
-<div id="outgoing_msg">
-            <div class="d-flex justify-content-between">
-
-              <p id="sed-time" class="small mb-1 text-muted">23 Jan 2:05 pm</p>
-
-              <p id="username" class="small mb-1">Johny Bullock</p>
-
-            </div>
-
-            <div class="d-flex flex-row justify-content-end mb-4 pt-1">
-
-              <div>
-
-                <p id="message" class="small p-2 me-3 mb-3 text-white rounded-3" style="background-color: #008080;">Thank you for your believe in
-
-                  our
-
-                  supports</p>
-
-              </div>
-
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp"
-
-                alt="avatar 1" style="width: 45px; height: 100%;">
-
-            </div>
-            </div>
-               <div class="fallback"></div> 
-              </div>
-
-          <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3">
-
-            <div class="message_form input-group mb-0">
-
-              <input type="text" class="mesaage_form__input form-control" placeholder="Type message"
-
-                aria-label="Recipient's username" aria-describedby="button-addon2" />
-
-              <button class="btn btn-secondary message_form__button" type="submit" id="button-addon2" style="padding-top: .55rem;">
-
-                Send
-
-              </button>
-
-            </div>
-
-          </div>
 
         </div>
 
-      </div>
+        <div class="card-body" data-mdb-perfect-scrollbar="true" style="position: relative; height: 30em">
+	<div id="messages">
+            <div class="d-flex flex-row justify-content-start  mt-2">
+
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                <div>
+
+                    <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                        <p class="small mb-1">Timona Siera</p>
+                        <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                        </p>
+                        <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="d-flex flex-row justify-content-end  mt-2">
+
+                <div>
+
+                    <div class="small p-2 ms-3 mb-3 rounded-3 text-white" style="background-color: #008080;">
+                        <p class="small mb-1">Johny Bullock</p>
+                        <p class="mb-1">You could believe whatever in the world you want for all I care. Anyways, thank you for your believe in our supports
+
+                        </p>
+                        <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                    </div>
+
+
+                </div>
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava6-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+
+
+
+            </div>
+            <div class="d-flex flex-row justify-content-start  mt-2">
+
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava5-bg.webp" alt="avatar 1" style="width: 45px; height: 100%;">
+
+                <div>
+
+                    <div class="small p-2 ms-3 mb-3 rounded-3" style="background-color: #f5f6f7;">
+                        <p class="small mb-1">Timona Siera</p>
+                        <p class="mb-1">For what reason would it be advisable for me to think about business content?
+                        </p>
+                        <p class="small mb-1 text-muted text-end">23 Jan 2:00 pm</p>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
+	</div>
+	<div class="card-footer text-muted d-flex justify-content-start align-items-center p-3" style="background-color: #f5f6f7; position:sticky; bottom:0; z-index: 2;">
+
+		<form class="input-group mb-0" action="" id="message_form">
+	 <div id="user"><%= currentUser %></div>
+			<input id="message_input" type="text" class="form-control" placeholder="Type message" />
+
+                    <button class="btn btn-secondary" id="send_message" style="padding-top: .55rem;">
+    
+                    Send
+    
+                  </button>
+
+                </form>
+
+            </div>
+
+        </div>
 
     </div>
 
-  </div>
-
-
-
-  
-  </div>
-    
-  
+</div>
 <%- include("../partials/footer.ejs"); %>
