--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,22 +1,24 @@
 <hr>
 </main>
 <!-- Chat Panel Start -->
-
-<footer>
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <p>Copyright &copy; 2023 Livchat</p>
+<%- include("../partials/chat.ejs"); %>
+    <footer>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>Copyright &copy; 2023 Livchat</p>
+            </div>
         </div>
+    </footer>
     </div>
-</footer>
-</div>
-<script src="/js/search-bundled.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/chat.js"></script>
-<script src="/js/search.js"></script>
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-<script>eruda.init();</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <!-- <script src="/js/search-bundled.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
+    <script src="/js/search.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>
+        eruda.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 
-</html>
+    </html>
