--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -18,7 +18,7 @@
         <div class="card-body" data-mdb-perfect-scrollbar="true" style="position: relative; height: 31em">
             <div id="messages">
             </div>
-            <div class="card-footer text-muted d-flex justify-content-start align-items-center border" style="background-color: #f5f6f7; position:sticky; bottom:0; z-index: 2;">
+            <div class="card-footer text-muted d-flex justify-content-start align-items-center border" style="background-color: #f5f6f7;width: 93%; position:absolute; right:3%; bottom:0; z-index: 2;">
 
                 <form class="input-group mb-0" action="" id="message_form">
                     <input id="message_input" type="text" class="form-control" placeholder="Type message" />
