--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -18,17 +18,19 @@
                                         <h4 class="text-reset mb-0 d-inline">
                                             <%= post.title %>
                                         </h4>
-                                        <ul class="ms-auto navbar-nav d-flex flex-row">
-                                            <li class="nav-item me-3 me-lg-0">
-                                                <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
-                                            </li>
-                                            <li class="nav-item me-3 me-lg-0">
-                                                <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
-                                            </li>
-                                        </ul>
+                                        <% if(!fellow) { %>
+                                            <ul class="ms-auto navbar-nav d-flex flex-row">
+                                                <li class="nav-item me-3 me-lg-0">
+                                                    <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
+                                                </li>
+                                                <li class="nav-item me-3 me-lg-0">
+                                                    <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
+                                                </li>
+                                            </ul>
+                                            <% } %>
                                     </div>
                                     <aside class="text-muted d-block mb-2 small">Posted by
-                                        <a href="#">
+                                        <a href="/fellowid/<%=post.user%>">
                                             <%= post.user%>
                                         </a> at
                                         <%= post.createdAt %> time ago</aside>
