--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,6 +12,7 @@
     </div>
     <!-- <script src="/js/search-bundled.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/follow.js"></script>
     <script src="/js/chat.js"></script>
     <script src="/js/search.js"></script>
     <script src="//cdn.jsdelivr.net/npm/eruda"></script>
