--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -25,8 +25,9 @@
         <div class="container-fluid">
             <div class="p-5 my-4">
                 <div class="row border rounded-3">
-                    <div class="col-md-7 p-5 my- bg-light rounded-3">
-                        <h1>Staying Connected</h1>
+		    <div class="col-md-7 p-5 my- bg-light rounded-3">
+                        <%- include("../partials/flash.ejs"); -%>
+			<h1>Staying Connected</h1>
                         <p class="lead">In today"s world the internet is a fast, sure and essential way of connecting with the people. With Livchat you can connect with family, friends or develop new relationships. You can share your thoughts at any time, view posts
                             shared by others and give your thoughts on it and many more...
                         </p>
