--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -1,24 +1,24 @@
-<div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 border collapse multi-collapse" id="chatbox" style="position: fixed; bottom:0; right: 0;">
+<div class="col-sm-8 col-md-5 col-lg-5 col-xl-4 collapse multi-collapse" id="chatbox">
 
-    <div class="card overflow-auto">
+    <div class="card">
 
-        <div class="card-header d-flex justify-content-between align-items-center p-3" style="background-color: #f5f6f7; border-top: 4px solid #008080; position:sticky; top:0; z-index: 2;">
+        <div class="card-header d-flex justify-content-between align-items-center p-3">
 
             <h6 class="mb-0">Chat messages</h6>
 
             <div class="d-flex flex-row align-items-center">
 
-                <span class="badge me-3" id="count" style="background-color: #008080;">#</span>
-                <button type="button" class="btn-close" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
-                <div style="font-size: x-small; position: absolute; left: 5%; bottom: 0; color: #008080;"><i id="type"></i></div>
+                <span class="badge me-3" id="count">#</span>
+                <button type="button" class="btn-close small" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
+                <div><i id="type"></i></div>
             </div>
 
         </div>
 
-        <div class="card-body" data-mdb-perfect-scrollbar="true" style="position: relative; height: 31em">
-            <div id="messages">
+        <div class="card-body p-0" data-mdb-perfect-scrollbar="true">
+            <div id="messages" class="m-2 mb-5">
             </div>
-            <div class="card-footer text-muted d-flex justify-content-start align-items-center border" style="background-color: #f5f6f7;width: 93%; position:absolute; right:3%; bottom:0; z-index: 2;">
+            <div class="card-footer text-muted align-items-center mx-2 border">
 
                 <form class="input-group mb-0" action="" id="message_form">
                     <input id="message_input" type="text" class="form-control" placeholder="Type message" />
