Frontend modifications for text display, spacing and datetime formatting

--- a/views/pages/create_post.ejs
+++ b/views/pages/create_post.ejs
@@ -7,7 +7,7 @@
                 <form id="createPost" action="/posts/create" method="POST" class="py-3">
                     <div class="mb-5">
                         <label class="form-label" for="inputTitle">Title</label>
-                        <input type="title" name='title' class="form-control" id="inputTitle" placeholder="Subject">
+                        <input type="title" name='title' class="form-control" autocomplete="off" id="inputTitle" placeholder="Subject">
                     </div>
                     <div class="mb-3">
                         <label class="form-label" for="inputContent">Content</label>
