--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -10,7 +10,7 @@
 
                 <span class="badge me-3" id="count">#</span>
                 <button type="button" class="btn-close small" data-bs-toggle="collapse" data-bs-target="#chatbox"></button>
-                <div><i id="type"></i></div>
+                <div><i id="type" class="text-capitalize"></i></div>
             </div>
 
         </div>
