--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -19,35 +19,37 @@
                                             <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
                                             <% }%>
                                     </a>
-                                    <h4 class="me-3">Icon
-                                        <%= user.username.toUpperCase() %>
+                                    <h4 class="me-3 text-capitalize">
+                                        <%= user.username %>
                                     </h4>
                                 </div>
-                                <div class="py-3" id="follows-posts">
+                                <div class="p-3 border rounded-4" id="follows-posts">
                                     <% if (posts === undefined) {%>
                                         <div class="text-center">
                                             <p>Your friends have not posted recently</p>
                                         </div>
                                         <% } else{ %>
-                                            <h3><small class="text-muted text-center"><i>This is your feed</i></small></h5>
-                                                <% posts.forEach(post => {%>
-                                                    <div class="d-flex border rounded-3 p-2 mb-2">
+                                            <h3><small class="text-muted text-center text-decoration-underline"><i>This is your feed.</i></small></h3>
+                                            <!-- <hr> -->
+                                            <% posts.forEach(post => {%>
+                                                <a href='/post/<%= post._id %>' class='a-card'>
+                                                    <div class="d-flex border-bottom rounded-3 p-2">
                                                         <div class="flex-shrink-0">
                                                             <% if(user.image) { %>
                                                                 <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
                                                                 <% }%>
                                                         </div>
                                                         <div class="flex-grow-1 ms-3">
+                                                            <% const formattedTime = `${post.createdAt.toLocaleString("en-US", {month: "short"})} ` + `${post.createdAt.toLocaleString("en-US", { day:"numeric", hour: "numeric", minute: "numeric" }).toLocaleLowerCase()}`%>
 
-                                                            <h6>
-                                                                <%= post.title %>
-                                                            </h6>
-                                                            <p><small class="text-muted"><i> Posted by <%=post.user%> on <%= post.createdAt.toDateString() %></i></small></p>
-                                                            <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
-
+                                                                <p><small class="text-muted"><i><span class="text-capitalize"><%=post.user%></span> posted on <%=formattedTime %></i></small></p>
+                                                                <h6 class="m-0">
+                                                                    <%= post.title %>
+                                                                </h6>
                                                         </div>
                                                     </div>
-                                                    <% });
+                                                </a>
+                                                <% });
 		} %>
                                 </div>
                                 <% } %>
