--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -10,8 +10,8 @@
                             <img src="<%=user.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
                             <% }%>
                     </a>
-                    <h4 class="me-3">Icon
-                        <%= user.username.toUpperCase() %>
+                    <h4 class="me-3 text-capitalize">
+                        <%= user.username %>
                     </h4>
                 </div>
                 <nav>
@@ -41,21 +41,27 @@
 
                                 <% if(posts.length > 0) {
 			  posts.forEach(post => {%>
-                                    <div class="d-flex border rounded-3 p-2 mb-2">
-                                        <div class="flex-shrink-0">
-                                            <% if(user.image) { %>
-                                                <img src="<%=user.image%>" class="rounded-circle m-3" height="30" alt="User's avatar" loading="lazy" />
-                                                <% }%>
-                                        </div>
-                                        <div class="flex-grow-1 ms-3">
-                                            <h6>
-                                                <%= post.title %>
-                                            </h6>
-                                            <p><small class="text-muted"><i> Posted by <%=post.user%> on <%= post.createdAt.toDateString() %></i></small></p>
-                                            <a href='/post/<%= post._id %>' class="btn btn-sm btn-primary">View Post</a>
+                                    <a href='/post/<%= post._id %>' class="a-card">
+                                        <div class="d-flex border-bottom rounded-3 p-2">
+                                            <div class="flex-shrink-0">
+                                                <% if(user.image) { %>
+                                                    <img src="<%=user.image%>" class="rounded-circle m-3" height="30" alt="User's avatar" loading="lazy" />
+                                                    <% }%>
+                                            </div>
+                                            <div class="flex-grow-1 ms-3">
+                                                <h6>
+                                                    <%= post.title %>
+                                                </h6>
+                                                <% const formattedTime = `${post.createdAt.toLocaleString("en-US", {month: "short"})} ` + `${post.createdAt.toLocaleString("en-US", { day:"numeric", hour: "numeric", minute: "numeric" }).toLocaleLowerCase()}`%>
 
+                                                    <p><small class="text-muted"><i> Posted by <span class="text-capitalize"><%=post.user%></span> on
+                                                <%= formattedTime %>
+                                                    </i>
+                                                    </small>
+                                                    </p>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </a>
                                     <% });
 			} %>
                     </div>
@@ -67,21 +73,21 @@
 
                                 <% if(followers.length > 0) {
 			  followers.forEach(follow => { %>
-                                    <div class="d-flex border rounded-3 p-2 mb-2">
-                                        <div class="flex-shrink-0">
-                                            <img src="<%=follow.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                    <a href='/folprofile/<%= follow._id %>' class='a-card'>
+                                        <div class="d-flex border-bottom rounded-3 p-2 pb-0">
+                                            <div class="flex-shrink-0">
+                                                <img src="<%=follow.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                            </div>
+                                            <div class="flex-grow-1 ms-3">
+                                                <h6 class="text-capitalize">
+                                                    <%= follow.username %>
+                                                </h6>
+                                                <p class="overFlow">
+                                                    <%= follow.about %>
+                                                </p>
+                                            </div>
                                         </div>
-                                        <div class="flex-grow-1 ms-3">
-                                            <a href='/folprofile/<%= follow._id %>'>
-                                                <%= follow.username.toUpperCase() %>
-                                            </a>
-                                            <p>
-                                                <%= follow.about %>
-                                            </p>
-                                            <a href='/folprofile/<%= follow._id %>' class="btn btn-sm btn-primary">View Profile</a>
-
-                                        </div>
-                                    </div>
+                                    </a>
                                     <% });
 			} %>
                     </div>
@@ -94,23 +100,23 @@
                                 <% if(following.length > 0) {
 			  following.forEach(follow => {
 			%>
-                                    <div class="d-flex border rounded-3 p-2 mb-2">
-                                        <div class="flex-shrink-0">
-                                            <% if(follow.image) { %>
-                                                <img src="<%=follow.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
-                                                <% }%>
+                                    <a href='/folprofile/<%=follow._id%>' class="a-card">
+                                        <div class="d-flex border-bottom rounded-3 p-2 pb-0">
+                                            <div class="flex-shrink-0">
+                                                <% if(follow.image) { %>
+                                                    <img src="<%=follow.image%>" class="rounded-circle" height="30" alt="User's avatar" loading="lazy" />
+                                                    <% }%>
+                                            </div>
+                                            <div class="flex-grow-1 ms-3">
+                                                <h6 class="text-capitalize">
+                                                    <%= follow.username %>
+                                                </h6>
+                                                <p class="overFlow">
+                                                    <%= follow.about %>
+                                                </p>
+                                            </div>
                                         </div>
-                                        <div class="flex-grow-1 ms-3">
-                                            <a href='/folprofile/<%=follow._id%>'>
-                                                <%= follow.username.toUpperCase() %>
-                                            </a>
-                                            <p>
-                                                <%= follow.about %>
-                                            </p>
-                                            <a href='/folprofile/<%=follow._id%>' class="btn btn-sm btn-primary">View Profile</a>
-
-                                        </div>
-                                    </div>
+                                    </a>
                                     <% });
 			} %>
                     </div>
