--- a/views/pages/single_post.ejs
+++ b/views/pages/single_post.ejs
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="p-5 my-4 bg-light rounded-3">
                 <%- include("../partials/flash.ejs"); -%>
-                    <a href="/profile"><i class="fas fa-arrow-circle-left" style="color:grey"></i></a>
+                    <a href="/profile"><i class="fas fa-arrow-circle-left" id="redirect"></i></a>
                     <div class="row">
                         <div id="postCard" class="card mb-3 card-body">
                             <div class="row align-items-center">
@@ -21,19 +21,21 @@
                                         <% if(!fellow) { %>
                                             <ul class="ms-auto navbar-nav d-flex flex-row">
                                                 <li class="nav-item me-3 me-lg-0">
-                                                    <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" style="color:blue" id="postEdit"></i></a>
+                                                    <a href="/post/edit/<%= post._id%>"><i class="fas fa-edit me-2" id="postEdit"></i></a>
                                                 </li>
                                                 <li class="nav-item me-3 me-lg-0">
-                                                    <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" style="color:red" id="postDelete"></i></a>
+                                                    <a href="/post/delete/<%= post._id%>"><i class="fas fa-trash-can" id="postDelete"></i></a>
                                                 </li>
                                             </ul>
                                             <% } %>
                                     </div>
                                     <aside class="text-muted d-block mb-2 small">Posted by
-                                        <a href="/fellowid/<%=post.user%>">
-                                            <%= post.user%>
-                                        </a> at
-                                        <%= post.createdAt %> time ago</aside>
+                                        <% const formattedTime = `${post.createdAt.toDateString()} ` + `at ${post.createdAt.toLocaleString("en-US", { hour: "numeric", minute: "numeric" }).toLocaleLowerCase()}`%>
+                                            <a href="/fellowid/<%=post.user%>" class="text-capitalize">
+                                                <%= post.user%>
+                                            </a> on
+                                            <%= formattedTime %>
+                                    </aside>
                                     <p>
                                         <%= post.content %>
                                     </p>
