--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,11 +10,8 @@
         </div>
     </footer>
     </div>
-    <!-- <script src="/js/search-bundled.js"></script> -->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/main-bundled.js"></script>
     <script src="/js/follow.js"></script>
-    <script src="/js/chat.js"></script>
-    <script src="/js/search.js"></script>
     <script src="//cdn.jsdelivr.net/npm/eruda"></script>
     <script>
         eruda.init();
